--- a/Customers.API/appsettings.json
+++ b/Customers.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Database=customers;Username=postgres;Password=postgres;CommandTimeout=120;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
