--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,15 @@ services:
     depends_on:
       - db
     ports:
-      - "7000:80"
+      - "7000:8080"
   db: # Banco de dados
     hostname: db
     image: postgres
     command: postgres -c log_min_messages=FATAL
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: psp
-      POSTGRES_DB: PaymentServiceProvider
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: Customers
     ports:
       - "5432:5432"
     volumes:
