Adicionando anonimização de clientes

--- a/Customers.API/appsettings.json
+++ b/Customers.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Database=customers;Username=postgres;Password=postgres;CommandTimeout=120;"
+    "DefaultConnection": "Host=localhost;Database=customers;Username=postgres;Password=postgres;CommandTimeout=120;"
   },
   "Logging": {
     "LogLevel": {
