alterando connection string do postgres

--- a/Customers.API/appsettings.json
+++ b/Customers.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=customers;Username=postgres;Password=postgres;CommandTimeout=120;"
+    "DefaultConnection": "Host=customers.crcmgu8oq64k.us-east-1.rds.amazonaws.com;Database=customers;Username=postgres;Password=awspostgres;CommandTimeout=120;"
   },
   "Logging": {
     "LogLevel": {
