--- a/Customers.API/appsettings.Development.json
+++ b/Customers.API/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Database=customers;Username=postgres;Password=postgres;CommandTimeout=120;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
