--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     hostname: api
     depends_on:
       - db
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     ports:
-      - "7000:8080"
+      - "7002:8080"
   db: # Banco de dados
     hostname: db
     image: postgres
@@ -14,7 +16,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: Customers
+      POSTGRES_DB: customers
     ports:
       - "5432:5432"
     volumes:
